// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToken is rendered 1`] = `
<span
  class="euiToken testClass1 testClass2 emotion-euiToken-circle-light-s-gray-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    data-euiicon-type="dot"
  >
    aria-label
  </span>
</span>
`;

exports[`EuiToken props color can be a custom hex 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-customColor"
  style="color: rgb(0, 0, 0); background-color: rgb(255, 0, 0);"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis0 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis1 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis1"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis2 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis3 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis3"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis4 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis5 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis5"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis6 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis7 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis7"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis8 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color euiColorVis9 is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis9"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props color gray is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props fill dark is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-dark-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props fill light is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props fill none is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-none-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenAlias is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenAlias"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenAnnotation is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenAnnotation"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenArray is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenArray"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenBinary is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenBinary"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenBoolean is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenBoolean"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenClass is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenClass"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenCompletionSuggester is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenCompletionSuggester"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenConstant is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenConstant"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenDate is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenDate"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenDenseVector is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenDenseVector"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenDimension is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenDimension"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenElement is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenElement"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenEnum is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenEnum"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenEnumMember is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenEnumMember"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenEvent is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenEvent"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenException is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenException"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenField is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenField"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenFile is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenFile"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenFlattened is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenFlattened"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenFunction is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenFunction"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenGeo is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenGeo"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenHistogram is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenHistogram"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenIP is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenIP"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenInterface is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenInterface"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenJoin is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenJoin"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenKey is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenKey"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenKeyword is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenKeyword"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenMethod is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenMethod"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenMetricCounter is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenMetricCounter"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenMetricGauge is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenMetricGauge"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenModule is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenModule"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNamespace is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenNamespace"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNested is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenNested"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNull is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenNull"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNumber is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenNumber"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenObject is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenObject"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenOperator is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenOperator"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenPackage is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenPackage"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenParameter is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenParameter"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenPercolator is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenPercolator"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenProperty is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenProperty"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenRange is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenRange"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenRankFeature is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenRankFeature"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenRankFeatures is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenRankFeatures"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenRepo is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenRepo"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenSearchType is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenSearchType"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenSemanticText is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenSemanticText"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenShape is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenShape"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenString is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenString"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenStruct is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenStruct"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenSymbol is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenSymbol"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenTag is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenTag"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenText is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
>
  <span
    data-euiicon-type="tokenText"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenTokenCount is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis6"
>
  <span
    data-euiicon-type="tokenTokenCount"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenVariable is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-euiColorVis4"
>
  <span
    data-euiicon-type="tokenVariable"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenVectorDense is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis8"
>
  <span
    data-euiicon-type="tokenVectorDense"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenVectorSparse is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-euiColorVis2"
>
  <span
    data-euiicon-type="tokenVectorSparse"
  />
</span>
`;

exports[`EuiToken props shape circle is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props shape rectangle is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-rectangle-light-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props shape square is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-square-light-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props size l is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-l-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props size m is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-m-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props size s is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-s-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;

exports[`EuiToken props size xs is rendered 1`] = `
<span
  class="euiToken emotion-euiToken-circle-light-xs-gray"
>
  <span
    data-euiicon-type="dot"
  />
</span>
`;
